Fix HTML character encoding and update section titles

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Sahil's Budget &amp; Expense Tracker</title>
+<title>Sahil's Budget & Expense Tracker</title>
 <link rel="stylesheet" href="style.css">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
@@ -12,7 +12,7 @@
 <div class="app-container">
 <!-- Header -->
 <header class="app-header">
-<h1>♦️ Sahil's Budget &amp; Expense Tracker</h1>
+<h1>💎 Sahil's Budget & Expense Tracker</h1>
 <p class="tagline">Professional Financial Dashboard | Track, Analyze, Succeed</p>
 <p class="subtitle">Track income, expenses, and manage your budget with ease</p>
 </header>
@@ -57,7 +57,7 @@
 <!-- Income & Cash Flow Overview -->
 <section class="section income-overview">
 <div class="section-header">
-<h2>💵 Income &amp; Cash Flow Overview</h2>
+<h2>💵 Income & Cash Flow Overview</h2>
 <p class="section-description">Set your monthly income and view your financial status</p>
 </div>
 <div class="overview-grid">
@@ -86,7 +86,7 @@
 </div>
 </section>
 
-<!-- NEW: Income Breakdown Section -->
+<!-- Income Breakdown Section -->
 <section class="section income-breakdown">
 <div class="section-header">
 <h2>💰 Income Breakdown</h2>
@@ -184,7 +184,6 @@
 <input type="number" id="budget-other" class="currency-input" min="0" step="0.01" placeholder="Enter amount">
 </div>
 </div>
-<!-- NEW CATEGORIES -->
 <div class="budget-item">
 <label for="budget-business">💼 Business Expenses</label>
 <div class="currency-input-wrapper">
@@ -283,7 +282,6 @@
 <p class="section-description">Your financial overview</p>
 </div>
 
-<!-- NEW: Summary Cards with Cash Inflow/Outflow -->
 <div class="summary-cards">
 <div class="summary-card card-inflow">
 <div class="card-icon">💰</div>
@@ -323,7 +321,6 @@
 </div>
 </div>
 
-<!-- Category Breakdown Table -->
 <div class="category-breakdown">
 <h3>Category Breakdown</h3>
 <div class="table-wrapper">
@@ -346,7 +343,6 @@
 </div>
 </div>
 
-<!-- Progress Bars -->
 <div class="progress-section">
 <h3>Category Progress</h3>
 <div id="progress-bars" class="progress-bars">
@@ -382,7 +378,7 @@
 <!-- Export & Backup Section -->
 <section class="section export-section">
 <div class="section-header">
-<h2>💾 Export &amp; Backup</h2>
+<h2>💾 Export & Backup</h2>
 <p class="section-description">Download your financial data</p>
 </div>
 <div class="export-buttons">
