--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
 </head>
 <body>
 <div class="app-container">
-<!-- Header -->
 <header class="app-header">
 <h1>💎 Sahil's Budget & Expense Tracker</h1>
 <p class="tagline">Professional Financial Dashboard | Track, Analyze, Succeed</p>
 <p class="subtitle">Track income, expenses, and manage your budget with ease</p>
 </header>
 
-<!-- Currency, Year & Month Selector -->
 <section class="section selectors-section">
 <div class="selectors-content">
 <div class="selector-group">
@@ -54,10 +52,9 @@
 </div>
 </section>
 
-<!-- Income & Cash Flow Overview -->
 <section class="section income-overview">
 <div class="section-header">
-<h2>💵 Income & Cash Flow Overview</h2>
+<h2>Income & Cash Flow Overview</h2>
 <p class="section-description">Set your monthly income and view your financial status</p>
 </div>
 <div class="overview-grid">
@@ -86,124 +83,116 @@
 </div>
 </section>
 
-<!-- Income Breakdown Section -->
 <section class="section income-breakdown">
 <div class="section-header">
-<h2>💰 Income Breakdown</h2>
+<h2>Income Breakdown</h2>
 <p class="section-description">Manage your income sources in detail</p>
 </div>
 
-<!-- 1:1 Clients -->
 <div class="income-subsection">
-<h3>👤 1:1 Clients</h3>
+<h3>1:1 Clients</h3>
 <div id="one-to-one-list" class="client-list"></div>
-<button class="btn btn-add" id="add-one-to-one-btn">+ Add More</button>
+<button class="btn btn-add" id="add-one-to-one-btn" type="button">+ Add More</button>
 <div class="income-subtotal">
 <span>Total from 1:1 Clients:</span>
 <span id="one-to-one-total">$0.00</span>
 </div>
 </div>
 
-<!-- Group Clients -->
 <div class="income-subsection">
-<h3>👥 Group Clients</h3>
+<h3>Group Clients</h3>
 <div id="group-list" class="client-list"></div>
-<button class="btn btn-add" id="add-group-btn">+ Add More</button>
+<button class="btn btn-add" id="add-group-btn" type="button">+ Add More</button>
 <div class="income-subtotal">
 <span>Total from Group Clients:</span>
 <span id="group-total">$0.00</span>
 </div>
 </div>
 
-<!-- Investment Income -->
 <div class="income-subsection">
-<h3>📈 Investment Income</h3>
+<h3>Investment Income</h3>
 <div class="currency-input-wrapper">
 <input type="number" id="investment-income" class="currency-input" min="0" step="0.01" placeholder="Enter investment income">
 </div>
 </div>
 
-<!-- Other Income -->
 <div class="income-subsection">
-<h3>💵 Other Income</h3>
+<h3>Other Income</h3>
 <div class="currency-input-wrapper">
 <input type="number" id="other-income" class="currency-input" min="0" step="0.01" placeholder="Enter other income">
 </div>
 </div>
 
-<!-- Grand Total -->
 <div class="grand-total-income">
-<span>💰 GRAND TOTAL INCOME</span>
+<span>Total Income</span>
 <span id="grand-total-income">$0.00</span>
 </div>
 </section>
 
-<!-- Alerts Container -->
 <div id="alerts-container" class="alerts-container"></div>
 
-<!-- Budget Setup Section -->
 <section class="section budget-setup">
 <div class="section-header">
-<h2>💰 Budget Setup</h2>
+<h2>Budget Setup</h2>
 <p class="section-description">Set your monthly budget limits for each category</p>
 </div>
 <div class="budget-grid">
 <div class="budget-item">
-<label for="budget-food">🍔 Food</label>
+<label for="budget-food">Food</label>
 <div class="currency-input-wrapper">
 <input type="number" id="budget-food" class="currency-input" min="0" step="0.01" placeholder="Enter amount">
 </div>
 </div>
 <div class="budget-item">
-<label for="budget-transportation">🚗 Transportation</label>
+<label for="budget-transportation">Transportation</label>
 <div class="currency-input-wrapper">
 <input type="number" id="budget-transportation" class="currency-input" min="0" step="0.01" placeholder="Enter amount">
 </div>
 </div>
 <div class="budget-item">
-<label for="budget-entertainment">🎬 Entertainment</label>
+<label for="budget-entertainment">Entertainment</label>
 <div class="currency-input-wrapper">
 <input type="number" id="budget-entertainment" class="currency-input" min="0" step="0.01" placeholder="Enter amount">
 </div>
 </div>
 <div class="budget-item">
-<label for="budget-shopping">🛍️ Shopping</label>
+<label for="budget-shopping">Shopping</label>
 <div class="currency-input-wrapper">
 <input type="number" id="budget-shopping" class="currency-input" min="0" step="0.01" placeholder="Enter amount">
 </div>
 </div>
 <div class="budget-item">
-<label for="budget-bills">💡 Bills</label>
+<label for="budget-bills">Bills</label>
 <div class="currency-input-wrapper">
 <input type="number" id="budget-bills" class="currency-input" min="0" step="0.01" placeholder="Enter amount">
 </div>
 </div>
 <div class="budget-item">
-<label for="budget-other">📦 Other</label>
+<label for="budget-other">Other</label>
 <div class="currency-input-wrapper">
 <input type="number" id="budget-other" class="currency-input" min="0" step="0.01" placeholder="Enter amount">
 </div>
 </div>
 <div class="budget-item">
-<label for="budget-business">💼 Business Expenses</label>
+<label for="budget-business">Business Expenses</label>
 <div class="currency-input-wrapper">
 <input type="number" id="budget-business" class="currency-input" min="0" step="0.01" placeholder="Enter amount">
 </div>
 </div>
 <div class="budget-item">
-<label for="budget-gym">🏋️ Gym</label>
+<label for="budget-gym">Gym</label>
 <div class="currency-input-wrapper">
 <input type="number" id="budget-gym" class="currency-input" min="0" step="0.01" placeholder="Enter amount">
 </div>
 </div>
 <div class="budget-item">
-<label for="budget-travel">✈️ Travel</label>
+<label for="budget-travel">Travel</label>
 <div class="currency-input-wrapper">
 <input type="number" id="budget-travel" class="currency-input" min="0" step="0.01" placeholder="Enter amount">
 </div>
 </div>
 <div class="budget-item">
-<label for="budget-daycare">🎓 Shayna Day Care Fee</label>
+<label for="budget-daycare">Shayna Day Care Fee</label>
 <div class="currency-input-wrapper">
 <input type="number" id="budget-daycare" class="currency-input" min="0" step="0.01" placeholder="Enter amount">
 </div>
@@ -214,13 +203,12 @@
 <span class="total-amount" id="total-budget">$0.00</span>
 </div>
 <button class="btn btn-primary" id="save-budget-btn">Save Budget</button>
-<div class="success-message" id="budget-success-msg">✓ Budget saved successfully!</div>
+<div class="success-message" id="budget-success-msg">Budget saved successfully!</div>
 </section>
 
-<!-- Expense Log Section -->
 <section class="section expense-log">
 <div class="section-header">
-<h2>📝 Expense Log</h2>
+<h2>Expense Log</h2>
 <p class="section-description">Add your expenses here</p>
 </div>
 <form id="expense-form" class="expense-form">
@@ -231,8 +219,8 @@
 </div>
 <div class="form-group">
 <label for="expense-amount">Amount</label>
-<div class="currency-input-wrapper">
-<input type="number" id="expense-amount" class="currency-input form-control" min="0.01" step="0.01" placeholder="Enter amount" required>
+<div class="currency-input-wrapper-expense">
+<input type="number" id="expense-amount" class="expense-amount-input" min="0.01" step="0.01" placeholder="Enter amount" required>
 </div>
 </div>
 </div>
@@ -241,16 +229,16 @@
 <label for="expense-category">Category</label>
 <select id="expense-category" class="form-control" required>
 <option value="">Select category</option>
-<option value="Food">🍔 Food</option>
-<option value="Transportation">🚗 Transportation</option>
-<option value="Entertainment">🎬 Entertainment</option>
-<option value="Shopping">🛍️ Shopping</option>
-<option value="Bills">💡 Bills</option>
-<option value="Other">📦 Other</option>
-<option value="Business Expenses">💼 Business Expenses</option>
-<option value="Gym">🏋️ Gym</option>
-<option value="Travel">✈️ Travel</option>
-<option value="Shayna Day Care Fee">🎓 Shayna Day Care Fee</option>
+<option value="Food">Food</option>
+<option value="Transportation">Transportation</option>
+<option value="Entertainment">Entertainment</option>
+<option value="Shopping">Shopping</option>
+<option value="Bills">Bills</option>
+<option value="Other">Other</option>
+<option value="Business Expenses">Business Expenses</option>
+<option value="Gym">Gym</option>
+<option value="Travel">Travel</option>
+<option value="Shayna Day Care Fee">Shayna Day Care Fee</option>
 </select>
 </div>
 <div class="form-group">
@@ -264,7 +252,7 @@
 </div>
 </form>
 <div class="expense-actions">
-<button class="btn btn-export" id="export-expenses-btn">📥 Export Expenses (CSV)</button>
+<button class="btn btn-export" id="export-expenses-btn">Export Expenses (CSV)</button>
 <button class="btn btn-danger-outline" id="clear-month-btn">Clear This Month</button>
 </div>
 <div class="recent-expenses">
@@ -275,10 +263,9 @@
 </div>
 </section>
 
-<!-- Dashboard Section -->
 <section class="section dashboard">
 <div class="section-header">
-<h2>📊 Dashboard</h2>
+<h2>Dashboard</h2>
 <p class="section-description">Your financial overview</p>
 </div>
 
@@ -351,10 +338,9 @@
 </div>
 </section>
 
-<!-- Charts Section -->
 <section class="section charts">
 <div class="section-header">
-<h2>📈 Visualizations</h2>
+<h2>Visualizations</h2>
 <p class="section-description">Visual breakdown of your spending</p>
 </div>
 <div class="charts-grid">
@@ -375,16 +361,15 @@
 </div>
 </section>
 
-<!-- Export & Backup Section -->
 <section class="section export-section">
 <div class="section-header">
-<h2>💾 Export & Backup</h2>
+<h2>Export & Backup</h2>
 <p class="section-description">Download your financial data</p>
 </div>
 <div class="export-buttons">
-<button class="btn btn-export" id="export-report-btn">📊 Export Monthly Report (CSV)</button>
-<button class="btn btn-export" id="export-all-btn">💾 Download Complete Backup (JSON)</button>
-<button class="btn btn-danger" id="clear-all-btn">🗑️ Clear All Data</button>
+<button class="btn btn-export" id="export-report-btn">Export Monthly Report (CSV)</button>
+<button class="btn btn-export" id="export-all-btn">Download Complete Backup (JSON)</button>
+<button class="btn btn-danger" id="clear-all-btn">Clear All Data</button>
 </div>
 </section>
 </div>
